upload delete assets
