# models/login_data.go
@@ -9,3 +9,7 @@ type LoginData struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type MessageResponse struct {
+	Message string `json:"message"`
+}
