# models/upload.go
@@ -1,0 +1,13 @@
+package models
+
+import (
+	"time"
+)
+
+type Upload struct {
+	Model
+	Name      string `json:"name" form:"name" binding:"required"`
+	File      string `json:"file" form:"file" binding:"required"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
